--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					</h2>
 				</div>
 				<span class="col-md-8">
-					<input class="form-control input-lg" type="text" name="search-bar-text" data-bind="value: defaultLoc, click: start" id="search-bar-text">
+					<input class="form-control input-lg" type="text" id="search-bar-text" data-bind="value: defaultLoc, click: start" id="search-bar-text">
 				</span>
 				<span class="col-md-4">
 					<button class="glyphicon glyphicon-search padd btn btn-primary btn-lg" type="submit" data-bind="click: start"></button>
